--- a/index.html
+++ b/index.html
@@ -6,36 +6,63 @@
 <body>
 <h1>🎙️ Pronunciation Practice</h1>
 <p>Say this sentence: <b>My favorite country is South Korea</b></p>
-<button id="recordButton">🎧 Record</button>
+<button id="recordButton">🎧 Start Recording</button>
+<p id="status"></p>
 <p id="result"></p>
+
+<!-- เสียงแจ้งเตือนเริ่มและหยุด -->
+<audio id="startBeep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
+<audio id="stopBeep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
 <script>
 const recordButton = document.getElementById('recordButton');
+const status = document.getElementById('status');
 const result = document.getElementById('result');
+const startBeep = document.getElementById('startBeep');
+const stopBeep = document.getElementById('stopBeep');
+
+let recorder;
+let chunks = [];
 
 recordButton.addEventListener('click', async () => {
-result.textContent = "Recording... (say your sentence)";
+if (!recorder || recorder.state === 'inactive') {
+// 🔊 เสียงเริ่มอัด
+startBeep.play();
+status.textContent = "🎙️ Recording... please speak now.";
+result.textContent = "";
+
 const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-const recorder = new MediaRecorder(stream);
-const chunks = [];
+recorder = new MediaRecorder(stream);
+chunks = [];
+
 recorder.ondataavailable = e => chunks.push(e.data);
 recorder.onstop = async () => {
-const audioBlob = new Blob(chunks, { type: 'audio/webm' });
-result.textContent = "Analyzing your voice...";
+// 🔊 เสียงหยุดอัด
+stopBeep.play();
+status.textContent = "⏳ Analyzing your voice...";
 
-// ส่งไฟล์เสียงไปยัง API ที่จะประเมินเสียงพูด
+const audioBlob = new Blob(chunks, { type: 'audio/webm' });
 const formData = new FormData();
 formData.append('file', audioBlob);
 
+// ส่งไฟล์เสียงไปยัง API
 const response = await fetch('/api/check-pronunciation', {
 method: 'POST',
 body: formData
 });
+
 const data = await response.json();
 result.textContent = `Your pronunciation score: ${data.score}/100 🎯`;
+status.textContent = "";
 };
+
 recorder.start();
-setTimeout(() => recorder.stop(), 3000);
+recordButton.textContent = "🛑 Stop Recording";
+} else {
+recorder.stop();
+recordButton.textContent = "🎧 Start Recording";
+status.textContent = "Processing your voice...";
+}
 });
 </script>
 </body>
