--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ status.textContent = "✨ Try another sentence!";
 });
 }
 }
+const recordButton = document.getElementById("recordButton");
+const status = document.getElementById("status");
+const result = document.getElementById("result");
+const startBeep = document.getElementById("startBeep");
+const stopBeep = document.getElementById("stopBeep");
 </script>
 </body>
 </html>
