--- a/index.html
+++ b/index.html
@@ -118,5 +118,66 @@ async function playTTS(text) {
   speechSynthesis.speak(utterance);
 }
 </script>
+<h2>🎙️ ทดสอบไมค์อัดเสียง</h2>
+<button id="startBtn">เริ่มอัดเสียง</button>
+<button id="stopBtn" disabled>หยุดอัดเสียง</button>
+<audio id="playback" controls></audio>
+
+<script>
+  let mediaRecorder;
+  let audioChunks = [];
+
+  async function initMic() {
+    try {
+      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+      mediaRecorder = new MediaRecorder(stream);
+
+      mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
+
+      mediaRecorder.onstop = async () => {
+        const blob = new Blob(audioChunks, { type: "audio/webm" });
+        const base64Audio = await toBase64(blob);
+
+        // 🔹 ส่งไฟล์เสียงไป API check-pronunciation
+        await fetch("/api/check-pronunciation", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            file: base64Audio.split(",")[1],
+            reference: "hello world"
+          })
+        });
+
+        document.getElementById("playback").src = URL.createObjectURL(blob);
+        audioChunks = [];
+      };
+    } catch (err) {
+      alert("กรุณาอนุญาตให้ใช้ไมโครโฟนในเบราว์เซอร์");
+      console.error(err);
+    }
+  }
+
+  function toBase64(blob) {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onloadend = () => resolve(reader.result);
+      reader.onerror = reject;
+      reader.readAsDataURL(blob);
+    });
+  }
+
+  document.getElementById("startBtn").onclick = async () => {
+    await initMic();
+    mediaRecorder.start();
+    document.getElementById("startBtn").disabled = true;
+    document.getElementById("stopBtn").disabled = false;
+  };
+
+  document.getElementById("stopBtn").onclick = () => {
+    mediaRecorder.stop();
+    document.getElementById("startBtn").disabled = false;
+    document.getElementById("stopBtn").disabled = true;
+  };
+</script>
 </body>
 </html>
